# RIS_VLC_HTVT

./: .gitignore  DEPLOY_STREAMLIT.md  README.md  app.py  config.py  example_config.json  main.py  plotting.py  pyproject.toml  requirements.txt  ris_channel.py  simulation.py  utils.py  vlc_channel.py
.streamlit/: config.toml
results/: ris_position_optimization.csv  scenario_results.csv  simulation_summary.md
ris_vlc_sim/: __init__.py  cli.py  config.py  plotting.py  report.py  ris_channel.py  simulation.py  utils.py  vlc_channel.py
tests/: test_app_room_figure.py  test_channels_and_utils.py  test_cli.py  test_config.py  test_simulation.py
